Add some more notes
Add some more notes

Contact: joaquin@isla.io

--- a/30012014.md
+++ b/30012014.md
@@ -21,3 +21,45 @@ e Urlauber, -: turista
 
 Reiseziel: s Reiseziel, -: destinacion
 
+###So kann man fragen
+
+Wo waren Sie im Urlaub? Wo waren Sie in den Ferien?
+
+Und wie war es? 
+
+Wie war das Wetter? Wetter: s Wetter, -: weather
+
+###So kann man antworten
+
+Ich war/ Wir waren + 
+
+an der Nordsee
+am Bodensee
+in den Bergen
+in Heidelberg
+auf Rügen
+
+Es war + 
+
+toll: great
+super
+sehr schön
+langweilig: boring
+nicht so schön
+
+Das Wetter war + 
+
+prima
+gut
+nicht so gut
+schlecht: bad
+Es hat oft geregnet: regular
+
+###Langer oder kurzer Vokal? 
+
+kurzer Vokal: toll, 
+
+langer Vokal: 
+
+
+
