Add file of 06022014
Add file of 06022014

Contact: joaquin@isla.io

--- a/28012014.md
+++ b/28012014.md
@@ -1,58 +1,33 @@
-#Dienstag, 28. Januar 2014
+#Donnerstag, 6. Februar 2014
 ===
 
-Fotocopia PERFEKT
+Termine
 
-Aufgabe 3: Welches Verb passt? Und in welcher Form?
-Tarea 3: Que verbo va mejor? Y en que forma?
+Mein Wochenplan
 
-1. Hast du heute (schon) die Nachrichten gehört? Has escuchado ya hoy las noticias? Hören/Gehört
+Woche vom ..... bis zum .....
 
-2. Dieses Jahr habe ich keine (einzige) Karte aus dem Urlaub geschrieben. Este verano no he escrito ninguna postal de vacaciones. Schreiben/Geschrieben
+| Tag | Übungszeit | Aktivitäten | 
+| --- | ---------- | ----------- | 
+| Montag | 6:00 | Aufstehen |
 
-3. Warum haben sie uns denn nichts davon gesagt? Por que no nos han dicho nada de ello? Sagen/Gesagt
 
-4. Der Portier hat die Tür (wie jeden Abend um 19 Uhr) geschlossen. El portero ha cerrado la puerta.  El portero ha cerrado la puerta (como cada tarde a las 19 horas). Schließen/Geschlossen
-
-5. Hans hat einen Ring auf der Straße gefunden. Hans ha encontrado un anillo en la calle. Finden/Gefunden
-
-Aufgabe 4: Konsequenzen
-Tarea 4: Consecuencias
-
-1. Ich bin hundemüde. Ich habe letzte Nacht schlecht geschlafen. Estoy super cansado. He dormido mal la noche anterior. Ich habe geschlafen: yo he dormido. Ich habe schlecht geschlafen. He dormido mal. Ich habe letzte Nacht schlecht geschlafen: he dormido mal la pasada noche. Schlaf/Geschlafen
-
-2. Er möchte nicht ins Kino gehen. Er hat den Film schon gesehen. El no quiere ir al cine. El ya ha visto la pelicula. Sehen/Gesehen
-
-3. Mir ist ein wenig schlecht. Ich habe zu viel gegessen. Me siento un poco mal, he comido demasiado. Mir ist = I feel a little bad = Ich fühle mich ein wenig schlecht. Essen/Gegessen
-
-4. Die Kartoffeln sind jetzt gar, sie hat sie 25 Minuten lang gekocht. Las patatas ya estan cocidas, ellas las ha cocinado durante 25 minutos. Jetzt gar (ya hechas). Kochen/Gekocht.
-
-5. Mein Portmonee ist weg! Jemand hat es gestolen. Mi monedero ha desaparecido. Alguien me lo ha robado. Stehlen/Gestolen
-
-6. Sie können auf keinen Fall Auto fahren! Sie haben zu viel Alkohol getrunken. Usted no puede ir de ninguna manera en coche. Ha bebido demasiado alcohol. Trinken/Getrunken
-
-7. Jetzt ist der Hund aber sauber! Otto hat ihn gründlich gewaschen. Ahora el perro esta limpio. Otto lo ha lavado a fondo. Waschen/Gewaschen
-
-Aufgabe 5: Wie hast du das Omelett gemacht? 
-Tarea 5: Como has hecho la tortilla?
-
-1. Zuerst habe ich die Eier schaumig geschlagen (schlagen). Primero he batido los huevos a punto de clara. Schlagen/Geschlagen
-
-2. Dann habe ich Salz und Kräuter, Mehl und Milch in die Schüssel gegeben (geben). Después he puesto sal, harina, hierbas y leche en un cuenco. Geben/gegeben
-
-3. Das habe ich alles gut gemischt (mischen). Lo he mezclado todo bien. Mischen/Gemischt 
-
-4. Dann habe ich den Teig in die Pfanne mit heißem Fett geschüttet (schütten). Despues he puesto la masa en la sarten. (mit heißen Fett)= con grasa caliente). Schütten/Geschüttet
-
-5. Jedes Omelett habe ich fünf Minuten auf jeder Seite gebraten (braten). He frito cada tortilla durante 5 minutos por cada lado. Braten/Gebraten 
-
-Aufgabe 6: Hast du schon deine Hausaufgaben gemacht? 
-Tarea 6: Ya has hecho tus deberes?
-
-1. Ja, klar. Ich habe den Text laut gelesen. Si, por supuesto. Ya he leido el texto en voz alta. Lesen/Gelesen 
-
-2. Dann habe ich die englischen Vokabeln gelernt. Luego, he aprendido el vocabulario en ingles. Lernen/Gelernt
-
-3. Die Mathematik-Aufgaben habe ich auch schon alle gemacht. Ya he hecho tambien todos los problemas de matematicas. Machen/Gemacht 
-
-4. Und schau mal: Ich habe ein Bild von unserem Haus gezeichnet. Y miranos: he dibujado un dibujo de nuestra casa. Zeichnen/Gezeichnet (Gemalt es pintar con pinturas). 
+Plain ASCII table, without Markdown
+╔═════════════╦══════════════════════════╦═════════════════════════════════╗
+║ Tag         ║               Übungszeit ║                     Aktivitäten ║
+╠═════════════╬══════════════════════════╬═════════════════════════════════╣
+║ Montag      ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+║             ║                          ║                                 ║
+╠═════════════╬══════════════════════════╬═════════════════════════════════╣
