Update today's sentences
Update today's sentences

Contact: joaquin@isla.io

--- a/20140220.md
+++ b/20140220.md
@@ -42,3 +42,37 @@ Ich bin in meinem alten Haus (Estoy en mi vieja casa)
 Ich bin in meiner alten Häusern (Estoy en mis viejas casas)
 
 
+###Adjetivos sin determinante + terminacion caracteristica del determinante
+
+NOMINATIVO (rese)
+
+Guter Geschmack (Buen gusto)
+
+Große Freude (Gran alegria)
+
+Gutes Wetter (Buen tiempo)
+
+Alte Leute (Gente anciana/mayor)
+
+ACUSATIVO (nese)
+
+Ich habe guten Geschmack (Tengo buen gusto)
+
+Ich habe große Freude (Tengo gran alegria)
+
+Ich mag gutes Wetter (Me gusta el buen tiempo)
+
+Es gibt alte Leute (Hay gente anciana)
+
+DATIVO (emeremen)
+
+Mit gutem Geschmack (Con buen gusto)
+
+Mit großer Freude (Con mucha alegria)
+
+Bei gutem Wetter (Con buen tiempo)
+
+Mit alten Leuten (Con gente mayor)
+
+
+
